@@ -36,6 +36,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20113: os.readv() and os.writev() now raise an OSError exception on
+  error instead of returning -1.
+
 - Issue #20072: Fixed multiple errors in tkinter with wantobjects is False.
 
 - Issue #20108: Avoid parameter name clash in inspect.getcallargs().
